# VRChat-OSC-Keyboard

./: .gitignore  App.test.tsx  App.tsx  README.md  THIRD_PARTY_MOZC_DICTIONARY_LICENSES.txt  constants.ts  debug.config.js  debug.config.json  index.css  index.html  package-lock.json  package.json  release.json  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts
.github/workflows/: release.yml  (+1 more)
components/: ConfirmDialog.tsx  CursorOverlay.tsx  Key.tsx  NotificationToast.tsx  SettingsModal.test.tsx  SettingsModal.tsx  StatusDisplay.tsx  TutorialOverlay.tsx  VirtualKeyboard.tsx
constants/: appConfig.ts  index.ts  keyboardLayout.ts  romajiMap.ts  translations.ts
electron/: input_handler.js  input_handler.test.ts  main.js  overlay.js  preload.js
hooks/: useIME.test.ts  useIME.ts  useKeyPressSound.ts  useKeyboardController.test.ts  useKeyboardController.ts  useOscSender.test.ts  useOscSender.ts  useTypingIndicator.ts  useUpdateChecker.ts  useVrScrollSelectionGuard.test.tsx  useVrScrollSelectionGuard.ts
native/: Cargo.toml  build.rs  build_log.txt  index.d.ts  index.js  index.node  vr-overlay-native.win32-x64-msvc.node
native/src/: lib.rs
native/src/overlay/: buffers.rs  constants.rs  controller_ops.rs  d3d11.rs  errors.rs  handles.rs  input_ops.rs  manager.rs  math.rs  mod.rs  overlay_ops.rs  texture_ops.rs  transform_ops.rs  types.rs
scripts/: rename-build-output.js
services/: oscService.ts
steamvr/: actions.json
stores/: configStore.test.ts  configStore.ts
types/: electron.d.ts  global.d.ts  ime.ts
utils/: colorUtils.ts  ime.ts
(+50 files in other folders)
