[package]
name = "vr-overlay-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.3", features = ["default", "napi4"] }
napi-derive = "3.5.2"
openvr_sys = "2.0"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
]

[build-dependencies]
napi-build = "2.3.1"
windows = { version = "0.58", features = ["Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D_Fxc"] }

